<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/tvSpeakerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvSpeakerName"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/ivSpeaker"
                android:layout_width="0dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivSpeaker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.4"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnLinkedin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="15dp"
                    android:text="@string/btn_linkedin"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorLinkedin" />

                <Button
                    android:id="@+id/btnFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnLinkedin"
                    android:layout_marginTop="5dp"
                    android:text="@string/btn_facebook"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorFacebook" />

                <Button
                    android:id="@+id/btnInstagram"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
                    android:layout_marginTop="5dp"
                    android:text="@string/btn_instagram"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorInstagram" />

                <Button
                    android:id="@+id/btnGithub"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/btnInstagram"
                    android:layout_marginTop="5dp"
                    android:text="@string/btn_github"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorGithub" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/clTop"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/tvSpeakerDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="20sp"
                android:textColor="@color/colorBlue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>