<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/colorTwo">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvEvent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="4dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg1">

            <ImageView
                android:id="@+id/ivEvent"
                android:layout_width="200dp"
                android:layout_height="55dp"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/fossdaylogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintTop_toBottomOf="@+id/ivEvent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="3dp"
                android:text="@string/date"
                android:textColor="@color/colorBlue"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLine1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cvEvent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".2">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvSchedule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/cvSponsors"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/calendar"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/ivSchedule"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="7dp"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".2"
                    android:text="@string/schedule"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvSponsors"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/cvSchedule"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/ivSponsors"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/cup"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/ivSponsors"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="7dp"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".2"
                    android:text="@string/sponsors"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLine2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/clLine1"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".2">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvMaps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/cvSpeakers"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/ivMaps"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/map"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/ivMaps"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="7dp"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".2"
                    android:text="@string/maps"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvSpeakers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/cvMaps"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/ivSpeakers"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/conference"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".4"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    card_view:layout_constraintTop_toBottomOf="@+id/ivSpeakers"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="7dp"
                    app:layout_constraintHeight_default="percent"
                    app:layout_constraintHeight_percent=".2"
                    android:text="@string/speakers"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlue"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLine3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/clLine2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1" >

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvGift"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:cardUseCompatPadding="true"

            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg1">

                <ImageView
                    android:id="@+id/ivGift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/gift" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTelegram"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/clLine3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".1">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvTelegram"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            card_view:cardCornerRadius="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTelegram"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toStartOf="@+id/ivTelegram"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="16dp"
                    android:text="@string/hint_telegram"/>

                <ImageView
                    android:id="@+id/ivTelegram"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintStart_toEndOf="@+id/tvTelegram"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/telegramofc" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>